# swan_aleo_check_aleo_proof

./: .gitignore  Cargo.toml  Dockerfile  Makefile
src/: main.rs  server.rs
