[package]
name = "swan_aleo_check_aleo_proof"
version = "0.1.0"
edition = "2021"

[dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
rev = "f761d1e"
#version = "=0.16.18"
features = [ "circuit", "console", "rocks" ]

[dependencies]
structopt = "0.3.26"
hex = "0.4.3"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-tcp-server= "18.0.0"
jsonrpc-ws-server = "18.0.0"
jsonrpc-stdio-server = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-server-utils = "18.0.0"
jsonrpc-pubsub = "18.0.0"